--- a/css/style.scss
+++ b/css/style.scss
@@ -24,6 +24,7 @@
   padding: 0;
   outline: none;
   direction: rtl;
+  scroll-behavior: smooth;
 }
 ::-webkit-scrollbar {
   width: 8px;
@@ -90,6 +91,7 @@ img {
 }
 body {
   background-color: var(--backgroundColor);
+  overflow-x: hidden;
 }
 input {
   accent-color: var(--mainColor) !important;
@@ -290,71 +292,9 @@ header {
     }
   }
 }
-footer {
-  .copyRight {
-    text-align: center;
-  }
-  .support {
-    position: fixed;
-    left: 10px;
-    bottom: 20px;
-    z-index: 999;
-    background-color: var(--bodyColor);
-    border-radius: 1000px;
-    padding: 5px;
-    .supportBtn {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-width: 50px;
-      min-height: 50px;
-      border-radius: 50%;
-      background-color: var(--mainColor);
-      box-shadow: var(--BigShadow);
-      cursor: pointer;
-      transition: var(--transition);
-      i {
-        font-size: 20px;
-        color: var(--whiteColor);
-      }
-    }
-    .links {
-      display: none;
-      a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-width: 50px;
-        min-height: 50px;
-        border-radius: 50%;
-        background-color: var(--whiteColor);
-        box-shadow: var(--BigShadow);
-        margin-bottom: 10px;
-        cursor: pointer;
-        i {
-          font-size: 24px;
-          color: var(--whiteColor);
-        }
-        // &.whatsapp {
-        //   background-color: #25d366;
-        // }
-        // &.email {
-        //   background-color: #c71610;
-        // }
-        // &.call {
-        //   background-color: #34b7f1;
-        // }
-        // &.location {
-        //   background-color: #f19f34;
-        // }
-
-      }
-    }
-  }
-}
 .btn {
   padding: 12px 32px;
-  // border: 1px solid $white-color;
+  // border: 1px solid var(--whiteColor);
   border: none;
   background-color: var(--mainColor);
   color: var(--whiteColor);
@@ -445,7 +385,6 @@ footer {
     text-align: center;
   }
 }
-
 .references {
   .swiper-slide {
     width: auto;
@@ -460,7 +399,406 @@ footer {
     }
   }
 }
-
+.spinner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 9999999;
+  left: 0;
+  top: 0;
+  background-color: var(--whiteColor);
+  .loader {
+    width: 150px;
+    height: 150px;
+    border: 1px var(--blackColor) solid;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -75px 0 0 -75px;
+    border-radius: 50%;
+    .loading {
+      font-size: 10px;
+      position: absolute;
+      width: 100%;
+      text-align: center;
+      line-height: 14px;
+      left: 0;
+      top: 50%;
+      margin-top: 20px;
+      color: var(--blackColor);
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+    .loader-circle-1 {
+      width: 138px;
+      height: 138px;
+      left: 5px;
+      top: 5px;
+      border: 1px var(--blackColor) solid;
+      border-radius: 50%;
+      position: absolute;
+      border-right-color: transparent;
+      -webkit-animation: spin 3s linear infinite;
+      animation: spin 3s linear infinite;
+      .loader-circle-2 {
+        width: 126px;
+        height: 126px;
+        left: 5px;
+        top: 5px;
+        border: 1px transparent solid;
+        border-radius: 50%;
+        position: absolute;
+        border-right-color: var(--mainColor);
+        -webkit-animation: spin 5s linear infinite;
+        animation: spin 5s linear infinite;
+      }
+    }
+    .line {
+      width: 10px;
+      height: 2px;
+      background: var(--blackColor);
+      position: absolute;
+      &:nth-child(1) {
+        left: 16px;
+        top: 50%;
+        margin-top: -1px;
+      }
+      &:nth-child(2) {
+        transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        left: 33px;
+        top: 33px;
+      }
+      &:nth-child(3) {
+        top: 16px;
+        left: 50%;
+        width: 2px;
+        height: 10px;
+      }
+      &:nth-child(4) {
+        transform: rotate(135deg);
+        -moz-transform: rotate(135deg);
+        -webkit-transform: rotate(135deg);
+        -ms-transform: rotate(135deg);
+        right: 33px;
+        top: 33px;
+      }
+      &:nth-child(5) {
+        right: 16px;
+        top: 50%;
+        margin-top: -1px;
+      }
+      &:nth-child(6) {
+        transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        right: 33px;
+        bottom: 33px;
+        background: var(--mainColor);
+      }
+    }
+    .subline {
+      position: absolute;
+      width: 3px;
+      height: 2px;
+      background: var(--blackColor);
+      &:nth-child(7) {
+        transform: rotate(22.5deg);
+        -moz-transform: rotate(22.5deg);
+        -webkit-transform: rotate(22.5deg);
+        -ms-transform: rotate(22.5deg);
+        left: 21px;
+        top: 50px;
+      }
+      &:nth-child(8) {
+        transform: rotate(67.5deg);
+        -moz-transform: rotate(67.5deg);
+        -webkit-transform: rotate(67.5deg);
+        -ms-transform: rotate(67.5deg);
+        left: 50px;
+        top: 21px;
+      }
+      &:nth-child(9) {
+        transform: rotate(112.5deg);
+        -moz-transform: rotate(112.5deg);
+        -webkit-transform: rotate(112.5deg);
+        -ms-transform: rotate(112.5deg);
+        right: 50px;
+        top: 21px;
+      }
+      &:nth-child(10) {
+        transform: rotate(157.5deg);
+        -moz-transform: rotate(157.5deg);
+        -webkit-transform: rotate(157.5deg);
+        -ms-transform: rotate(157.5deg);
+        right: 21px;
+        top: 50px;
+      }
+      &:nth-child(11) {
+        transform: rotate(22.5deg);
+        -moz-transform: rotate(22.5deg);
+        -webkit-transform: rotate(22.5deg);
+        -ms-transform: rotate(22.5deg);
+        right: 20px;
+        bottom: 49px;
+        background: var(--mainColor);
+      }
+    }
+    .needle {
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      border: 1px var(--blackColor) solid;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      margin: -8px 0 0 -8px;
+      z-index: 1;
+      -webkit-animation: pegIt 3s infinite ease-in-out;
+      animation: pegIt 3s infinite ease-in-out;
+      &:before {
+        content: "";
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 3.5px 50px 3.5px 0;
+        border-color: transparent var(--mainColor) transparent transparent;
+        position: absolute;
+        right: 50%;
+        top: 50%;
+        margin: -3.5px 0 0 0;
+        border-radius: 0 50% 50% 0;
+      }
+    }
+  }
+  @keyframes pegIt {
+    0% {
+      transform: rotate(0deg);
+    }
+    16% {
+      transform: rotate(75deg);
+    }
+    25% {
+      transform: rotate(55deg);
+    }
+    30% {
+      transform: rotate(90deg);
+    }
+    36% {
+      transform: rotate(170deg);
+    }
+    42% {
+      transform: rotate(150deg);
+    }
+    50% {
+      transform: rotate(227deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+  }
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
+footer {
+  position: relative;
+  display: block;
+  width: 100%;
+  transition: 0.3s ease-in-out;
+  color: var(--textColor);
+  overflow: hidden;
+  text-align: center;
+  padding-top: 80px;
+  padding-bottom: 30px;
+  margin-top: 50px;
+  .container {
+    margin: 0px auto;
+    max-width: 640px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    &::before {
+      z-index: -1;
+      content: "";
+      display: block;
+      width: 200%;
+      height: 0px;
+      padding-top: 200%;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: 50% 0px;
+      background-image: url("../img/footer.svg");
+      position: absolute;
+      top: -30px;
+      left: -50%;
+      @media (max-width: 768px) {
+        width: 350%;
+        padding-top: 350%;
+        left: -130%;
+        top: -15px;
+      }
+    }
+  }
+  .logo {
+    text-align: center;
+    padding: 0px 30px 0;
+    img {
+      height: 80px;
+      object-fit: contain;
+      @media (max-width: 768px) {
+        height: 70px;
+      }
+    }
+  }
+  .links {
+    text-align: center;
+    padding: 50px 0 30px;
+    ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      li {
+        display: inline-block;
+        padding: 10px;
+        a {
+          color: var(--blackColor);
+          transition: var(--transition);
+          &:hover {
+            color: var(--mainColor);
+          }
+        }
+      }
+    }
+  }
+  .social {
+    text-align: center;
+    margin: auto;
+    ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      li {
+        display: inline-block;
+        padding: 5px;
+        a {
+          width: 100%;
+          height: 100%;
+          display: inline-flex;
+          min-width: 50px;
+          height: 50px;
+          justify-content: center;
+          align-items: center;
+          color: var(--textColor);
+          border-radius: 100px;
+          border: 1px solid var(--textColor);
+          transition: var(--transition);
+          circle,
+          path {
+            fill: #777;
+            transition: var(--transition);
+          }
+          &:hover {
+            background-color: var(--mainColor);
+            color: var(--whiteColor);
+            border: 1px solid var(--mainColor);
+            transform: translateY(-5px);
+            circle,
+            path {
+              fill: var(--whiteColor);
+            }
+          }
+        }
+      }
+    }
+  }
+  .top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+    flex-wrap: wrap;
+  }
+  .quickLinks {
+    margin: auto;
+    a {
+      padding: 8px;
+      display: inline-block;
+      color: var(--textColor);
+      &:hover {
+        color: var(--mainColor);
+      }
+    }
+  }
+  .support {
+    position: fixed;
+    left: 10px;
+    bottom: 20px;
+    z-index: 999;
+    background-color: var(--bodyColor);
+    border-radius: 1000px;
+    padding: 5px;
+    .supportBtn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-width: 50px;
+      min-height: 50px;
+      border-radius: 50%;
+      background-color: var(--mainColor);
+      box-shadow: var(--BigShadow);
+      cursor: pointer;
+      transition: var(--transition);
+      i {
+        font-size: 20px;
+        color: var(--whiteColor);
+      }
+    }
+    .links {
+      display: none;
+      padding: 0;
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-width: 50px;
+        min-height: 50px;
+        border-radius: 50%;
+        background-color: var(--whiteColor);
+        box-shadow: var(--BigShadow);
+        margin-bottom: 10px;
+        cursor: pointer;
+        i {
+          font-size: 24px;
+          color: var(--whiteColor);
+        }
+        // &.whatsapp {
+        //   background-color: #25d366;
+        // }
+        // &.email {
+        //   background-color: #c71610;
+        // }
+        // &.call {
+        //   background-color: #34b7f1;
+        // }
+        // &.location {
+        //   background-color: #f19f34;
+        // }
+      }
+    }
+  }
+}
 // //////////////////////////////////////////==================
 // //////////////////////////////////////////==================
 // //////////////////////////////////////////==================
